--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="container-lg">
+    <header class="">
       <!-- nav section start -->
-      <nav class="py-4 navbar navbar-expand-lg bg-transparent">
+      <nav class="container-lg py-4 navbar navbar-expand-lg bg-transparent">
         <div class="container-fluid">
           <button
             class="navbar-toggler"
@@ -77,11 +77,7 @@
         <div class="carousel-inner">
           <!-- carousel item 1 -->
           <div class="carousel-item active">
-            <img
-              src="images/banner-1.png"
-              class="d-block w-100 rounded"
-              alt="..."
-            />
+            <img src="images/banner-1.png" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block w-50 mx-auto">
               <h5 class="fs-1 fw-bold">
                 The perfect venue for your <br />
@@ -103,7 +99,7 @@
             <img
               aria-colspan=""
               src="images/banner-2.png"
-              class="d-block w-100 rounded"
+              class="d-block w-100"
               alt="..."
             />
             <div class="carousel-caption d-none d-md-block w-50 mx-auto">
@@ -124,11 +120,7 @@
           </div>
           <!-- carousel item 3 -->
           <div class="carousel-item">
-            <img
-              src="images/banner-3.png"
-              class="d-block w-100 rounded"
-              alt="..."
-            />
+            <img src="images/banner-3.png" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block w-50 mx-auto">
               <h5 class="fs-1 fw-bold">
                 The perfect venue for your <br />
@@ -167,6 +159,40 @@
       </div>
       <!-- header carousel section end -->
     </header>
+    <main class="container-lg">
+      <!-- moments section start -->
+      <section class="mt-5">
+        <div class="row pt-5 align-items-center justify-content-center gy-5">
+          <div
+            class="col-md-6 col-12 d-flex align-items-center justify-content-center order-2 order-md-0"
+          >
+            <img class="img-fluid" src="images/wedding.png" alt="wedding" />
+          </div>
+          <div class="col-md-6 col-12 position-relative z-0">
+            <h1 class="fs-2">Every moment is Precious</h1>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            <button class="btn btn-primary bg-opacity-25 order-3 order-md-2">
+              Explore our album <img src="icons/arrow-forward 1.svg" alt="" />
+            </button>
+            <div
+              class="shadow border-start border-5 border-primary-subtle w-50 py-3 PX-1 position-absolute end-0 bg-white top-1 z-1"
+            >
+              <div class="d-flex align-items-center justify-content-center">
+                <p class="mb-0">
+                  <img class="me-2" src="icons/Vector.svg" alt="" /> 20% off on
+                  next booking
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- moments section end -->
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
