--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Convention Center</title>
+    <!-- font-awesome icons link -->
+    <script
+      src="https://kit.fontawesome.com/c70448b9bf.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -192,6 +197,203 @@
         </div>
       </section>
       <!-- moments section end -->
+      <!-- Our packages section start -->
+      <section class="mt-5 pt-5">
+        <h1 class="fs-2 text-center fw-bold mb-5">Our package</h1>
+        <!-- packages start -->
+        <div class="row row-cols-2 row-cols-md-3 pt-5 row-cols-lg-4 g-4">
+          <div class="col rounded-5">
+            <div class="card border-0 h-100">
+              <div class="card-body">
+                <h5 class="card-title fs-2 fw-bolder">$300</h5>
+                <h5 class="card-title fs-3">Business fair</h5>
+                <p class="card-text">
+                  For most businesses event like book fair, craft fair.
+                </p>
+                <div>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >limited space access
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Secuirty facility
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >event support
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Decoration design
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Per day bill
+                  </p>
+                </div>
+                <button
+                  class="btn btn-danger border-0 px-5 rounded-pill bg-danger-subtle bg-opacity-25"
+                >
+                  Choose plan
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col rounded-5">
+            <div class="card border-0 h-100 mb-5">
+              <div class="card-body">
+                <h5 class="card-title fs-2 fw-bolder">$300</h5>
+                <h5 class="card-title fs-3">Business fair</h5>
+                <p class="card-text">
+                  For most businesses event like book fair, craft fair.
+                </p>
+                <div>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >limited space access
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Secuirty facility
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >event support
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Decoration design
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Per day bill
+                  </p>
+                </div>
+                <button
+                  class="btn btn-danger border-0 px-5 rounded-pill bg-danger-subtle bg-opacity-25"
+                >
+                  Choose plan
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col rounded-5">
+            <div
+              class="card border-0 weading-plus-card h-100 position-relative"
+            >
+              <span
+                class="position-absolute top-0 start-100 translate-middle badge rounded-pill fw-bolder bg-danger py-2 px-3"
+              >
+                Hot
+              </span>
+              <div class="card-body">
+                <h5 class="card-title fs-2 fw-bolder">$300</h5>
+                <h5 class="card-title fs-3">Business fair</h5>
+                <p class="card-text">
+                  For most businesses event like book fair, craft fair.
+                </p>
+                <div>
+                  <p>
+                    <i class="fa-solid fa-circle-check fs-4 me-1"></i>limited
+                    space access
+                  </p>
+                  <p>
+                    <i class="fa-solid fa-circle-check fs-4 me-1"></i>Secuirty
+                    facility
+                  </p>
+                  <p>
+                    <i class="fa-solid fa-circle-check fs-4 me-1"></i>event
+                    support
+                  </p>
+                  <p>
+                    <i class="fa-solid fa-circle-check fs-4 me-1"></i>Decoration
+                    design
+                  </p>
+                  <p>
+                    <i class="fa-solid fa-circle-check fs-4 me-1"></i>Per day
+                    bill
+                  </p>
+                </div>
+                <button
+                  class="btn btn-danger border-0 px-5 rounded-pill text-info bg-light"
+                >
+                  Choose plan
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col rounded-5">
+            <div class="card border-0 h-100">
+              <div class="card-body">
+                <h5 class="card-title fs-2 fw-bolder">$300</h5>
+                <h5 class="card-title fs-3">Business fair</h5>
+                <p class="card-text">
+                  For most businesses event like book fair, craft fair.
+                </p>
+                <div>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >limited space access
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Secuirty facility
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >event support
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Decoration design
+                  </p>
+                  <p>
+                    <i
+                      class="fa-solid fa-circle-check text-success-emphasis fs-4 me-1"
+                    ></i
+                    >Per day bill
+                  </p>
+                </div>
+                <button
+                  class="btn btn-danger border-0 px-5 rounded-pill bg-danger-subtle bg-opacity-25"
+                >
+                  Choose plan
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Our packages section end -->
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
