--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <section class="mt-5 pt-5">
         <h1 class="fs-2 text-center fw-bold mb-5">Our package</h1>
         <!-- packages start -->
-        <div class="row row-cols-2 row-cols-md-3 pt-5 row-cols-lg-4 g-4">
+        <div class="row row-cols-2 row-cols-md-3 pt-5 gx-4">
           <div class="col rounded-5">
             <div class="card border-0 h-100">
               <div class="card-body">
@@ -300,7 +300,7 @@
           </div>
           <div class="col rounded-5">
             <div
-              class="card border-0 weading-plus-card h-100 position-relative"
+              class="card border-0 px-3 weading-plus-card h-100 position-relative"
             >
               <span
                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill fw-bolder bg-danger py-2 px-3"
@@ -394,6 +394,72 @@
         </div>
       </section>
       <!-- Our packages section end -->
+      <!-- happy clients section start -->
+      <section class="mt-5">
+        <h1 class="fs-2 fw-bold text-center my-5">Happy Clients says</h1>
+        <!-- clients -->
+        <!-- client 1 -->
+        <div class="row row-cols-1 row-cols-md-3 g-4 gx-4">
+          <div class="col">
+            <div
+              class="rounded shadow py-3 px-5 d-flex flex-column align-items-center justify-content-center"
+            >
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <img
+                src="images/person-1.png"
+                class="card-img-top w-25"
+                alt="..."
+              />
+              <div class="card-body d-flex flex-column align-items-center">
+                <h5 class="card-title my-4">Regina Miles</h5>
+                <h6 class="fs-6">Banker</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="rounded shadow py-3 px-5 d-flex flex-column align-items-center justify-content-center"
+            >
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <img
+                src="images/person-2.png"
+                class="card-img-top w-25"
+                alt="..."
+              />
+              <div class="card-body d-flex flex-column align-items-center">
+                <h5 class="card-title my-4">Jone Drake</h5>
+                <h6 class="fs-6">Banker</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="rounded shadow py-3 px-5 d-flex flex-column align-items-center justify-content-center"
+            >
+              <p class="text-center">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <img
+                src="images/person-3.png"
+                class="card-img-top w-25"
+                alt="..."
+              />
+              <div class="card-body d-flex flex-column align-items-center">
+                <h5 class="card-title my-4">Cret Yater</h5>
+                <h6 class="fs-6">Banker</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- happy clients section end -->
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
