--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <section class="mt-5 pt-5">
         <h1 class="fs-2 text-center fw-bold mb-5">Our package</h1>
         <!-- packages start -->
-        <div class="row row-cols-2 row-cols-md-3 pt-5 gx-4">
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 pt-5 gx-4">
           <div class="col rounded-5">
             <div class="card border-0 h-100">
               <div class="card-body">
@@ -300,7 +300,7 @@
           </div>
           <div class="col rounded-5">
             <div
-              class="card border-0 px-3 weading-plus-card h-100 position-relative"
+              class="card border-0 weading-plus-card h-100 position-relative"
             >
               <span
                 class="position-absolute top-0 start-100 translate-middle badge rounded-pill fw-bolder bg-danger py-2 px-3"
@@ -398,8 +398,8 @@
       <section class="mt-5">
         <h1 class="fs-2 fw-bold text-center my-5">Happy Clients says</h1>
         <!-- clients -->
-        <!-- client 1 -->
         <div class="row row-cols-1 row-cols-md-3 g-4 gx-4">
+          <!-- client 1 -->
           <div class="col">
             <div
               class="rounded shadow py-3 px-5 d-flex flex-column align-items-center justify-content-center"
@@ -419,6 +419,7 @@
               </div>
             </div>
           </div>
+          <!-- client 2 -->
           <div class="col">
             <div
               class="rounded shadow py-3 px-5 d-flex flex-column align-items-center justify-content-center"
@@ -438,6 +439,7 @@
               </div>
             </div>
           </div>
+          <!-- client 3 -->
           <div class="col">
             <div
               class="rounded shadow py-3 px-5 d-flex flex-column align-items-center justify-content-center"
@@ -460,6 +462,142 @@
         </div>
       </section>
       <!-- happy clients section end -->
+       <!-- Frequently Asked Questions section start -->
+      <section class="pt-5">
+        <h2 class="text-center border-3 my-5">
+          Frequently Asked <span class="text-warning">Questions</span>
+        </h2>
+        <div class="row w-100 align-items-center justify-content-center row-cols-md-2 g-4">
+          <div class="col order-2 order-md-0">
+            <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button
+                  class="accordion-button"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  What are the most important things I should know about riding a bike?
+                </button>
+              </h2>
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  <strong>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. 
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo"
+                >
+                 How can I tell if my helmet is old and I need a new one?
+                </button>
+              </h2>
+              <div
+                id="collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  <strong>This is the second item's accordion body.</strong> It
+                  is hidden by default, until the collapse plugin adds the
+                  appropriate classes that we use to style each element. These
+                  classes control the overall appearance, as well as the showing
+                  and hiding via CSS transitions. You can modify any of this
+                  with custom CSS or overriding our default variables. It's also
+                  worth noting that just about any HTML can go within the
+                  <code>.accordion-body</code>, though the transition does limit
+                  overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree"
+                  aria-expanded="false"
+                  aria-controls="collapseThree"
+                >
+                  My bike has been in storage is it safe to ride?
+                </button>
+              </h2>
+              <div
+                id="collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It
+                  is hidden by default, until the collapse plugin adds the
+                  appropriate classes that we use to style each element. These
+                  classes control the overall appearance, as well as the showing
+                  and hiding via CSS transitions. You can modify any of this
+                  with custom CSS or overriding our default variables. It's also
+                  worth noting that just about any HTML can go within the
+                  <code>.accordion-body</code>, though the transition does limit
+                  overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingFour">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseFour"
+                  aria-expanded="false"
+                  aria-controls="collapseFour"
+                >
+                  My bike has been in storage is it safe to ride?
+                </button>
+              </h2>
+              <div
+                id="collapseFour"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingFour"
+                data-bs-parent="#accordionExample"
+              >
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It
+                  is hidden by default, until the collapse plugin adds the
+                  appropriate classes that we use to style each element. These
+                  classes control the overall appearance, as well as the showing
+                  and hiding via CSS transitions. You can modify any of this
+                  with custom CSS or overriding our default variables. It's also
+                  worth noting that just about any HTML can go within the
+                  <code>.accordion-body</code>, though the transition does limit
+                  overflow.
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+           <div class="col order-1 order-md-1 flex align-items-center justify-content-center">
+             <img class="img-fluid " src="images/people.png" alt="" />
+           </div>
+        </div>
+      </section>
+      <!-- Frequently Asked Questions section end -->
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
