--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <h2 class="text-center border-3 my-5">
           Frequently Asked <span class="text-warning">Questions</span>
         </h2>
-        <div class="row w-100 align-items-center justify-content-center row-cols-md-2 g-4">
+        <div class="row align-items-center justify-content-center row-cols-md-2 g-4">
           <div class="col order-2 order-md-0">
             <div class="accordion" id="accordionExample">
             <div class="accordion-item">
@@ -599,6 +599,34 @@
       </section>
       <!-- Frequently Asked Questions section end -->
     </main>
+    <!-- footer section start -->
+    <footer class="container-fluid p-5 bg-dark mt-5 text-white">
+      <div class="container-lg">
+        <div class="row align-items-center justify-content-center gy-5">
+          <div class="col-lg-8">
+            <ul class="nav">
+              <li><a class="nav-link text-white" href="">Download Now</a></li>
+              <li><a class="nav-link text-white" href="">License</a></li>
+            </ul>
+            <ul class="nav">
+              <li><a class="nav-link text-white" href="">About</a></li>
+              <li><a class="nav-link text-white" href="">Features</a></li>
+              <li><a class="nav-link text-white" href="">Pricing</a></li>
+              <li><a class="nav-link text-white" href="">Careers</a></li>
+              <li><a class="nav-link text-white" href="">Help</a></li>
+              <li><a class="nav-link text-white" href="">Privacy Policy</a></li>
+            </ul>
+            <p class="ms-3">&#xA9 2020 bike. All rights reserved</p>
+          </div>
+          <div class="col-md-4">
+            <h3 class="my-3">Get the App</h3>
+            <img class="w-50" src="images/android.png" alt="" />
+            <img class="w-50 my-3" src="images/ios.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer section end -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
