--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <section class="mt-5 pt-5">
         <h1 class="fs-2 text-center fw-bold mb-5">Our package</h1>
         <!-- packages start -->
-        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 pt-5 gx-4">
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 pt-5 gy-4">
           <div class="col rounded-5">
             <div class="card border-0 h-100">
               <div class="card-body">
@@ -303,7 +303,7 @@
               class="card border-0 weading-plus-card h-100 position-relative"
             >
               <span
-                class="position-absolute top-0 start-100 translate-middle badge rounded-pill fw-bolder bg-danger py-2 px-3"
+                class="hot-item position-absolute top-0 translate-middle badge rounded-pill fw-bolder bg-danger py-2 px-3"
               >
                 Hot
               </span>
@@ -463,7 +463,7 @@
       </section>
       <!-- happy clients section end -->
        <!-- Frequently Asked Questions section start -->
-      <section class="pt-5">
+      <section class="pt-5 ">
         <h2 class="text-center border-3 my-5">
           Frequently Asked <span class="text-warning">Questions</span>
         </h2>
@@ -593,15 +593,14 @@
           </div>
           </div>
            <div class="col order-1 order-md-1 flex align-items-center justify-content-center">
-             <img class="img-fluid " src="images/people.png" alt="" />
+             <img class="img-fluid" src="images/people.png" alt="" />
            </div>
         </div>
       </section>
       <!-- Frequently Asked Questions section end -->
     </main>
     <!-- footer section start -->
-    <footer class="container-fluid p-5 bg-dark mt-5 text-white">
-      <div class="container-lg">
+    <footer class="container-fluid bg-dark mt-5 text-white">
         <div class="row align-items-center justify-content-center gy-5">
           <div class="col-lg-8">
             <ul class="nav">
@@ -624,7 +623,6 @@
             <img class="w-50 my-3" src="images/ios.png" alt="" />
           </div>
         </div>
-      </div>
     </footer>
     <!-- footer section end -->
     <script
